Fixed most mobs